--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="update">Update</string>
     <string name="delete">Delete</string>
     <string name="fetch">Fetch</string>
+    <string name="fetchAll">Fetch All</string>
 </resources>
